wacc/test/golden/semanticErr.multiple.messyExpr
# long expression with multiple type mismatches

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin

  int x = ((1 + true) * (2 - false)) || 17 ;
  exit x

end


In test/wacc_examples/invalid/semanticErr/multiple/messyExpr.wacc (line 13, column 15):
type error: expected an int but found a bool
> 
>   int x = ((1 + true) * (2 - false)) || 17 ;
>               ^
>   exit x

